# ai-job-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  _probe_card.py  _probe_extract.py  _probe_flow.py  _probe_headed.py  _probe_matrix.py  _probe_naukri.py  _probe_naukri2.py  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260611_0001_initial.py  20260611_0002_add_users_matches_applications.py  20260611_0003_add_linkedin_job_fields.py  20260611_0004_add_job_ranking_fields.py  20260611_0005_add_pgvector_embeddings.py
app/: __init__.py  main.py
app/api/: health.py  router.py
app/core/: celery_app.py  config.py  logging.py
app/db/: base.py  models.py  session.py
app/modules/: common.py
app/modules/ai/: __init__.py  batch_match.py  cover_letter_generation.py  matching.py  openai_client.py  resume_optimization.py  router.py  schemas.py  semantic_shortlist.py  tasks.py
app/modules/applications/: __init__.py  model.py  router.py  schemas.py
tests/: test_ai_cover_letter_generation.py  test_ai_matching.py  test_ai_resume_optimization.py  test_api.py  test_automation_tasks.py  test_batch_match.py  test_health.py  test_indeed_scraper.py  test_job_ranking.py  test_linkedin_scraper.py  test_models.py  test_semantic_search.py  test_visibility.py
web/: .env.example  Dockerfile  next-env.d.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: job-listings.tsx  match-workbench.tsx  theme-toggle.tsx  visibility-view.tsx
web/lib/: api.ts  format.ts  types.ts
(+36 files in other folders)
