[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-agent"
version = "0.1.0"
description = "Backend for an AI job automation platform"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "celery[redis]>=5.4,<6",
  "fastapi>=0.115,<1",
  "openai>=1.0,<2",
  "playwright>=1.50,<2",
  "pydantic-settings>=2.7,<3",
  "python-json-logger>=3.2,<4",
  "pgvector>=0.3,<1",
  "redis>=5.2,<9",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
